src/test/ui/suggestions/format-borrow.stderr
error[E0308]: mismatched types
  --> $DIR/format-borrow.rs:2:21
   |
LL |     let a: String = &String::from("a");
   |                     ^^^^^^^^^^^^^^^^^^
   |                     |
   |                     expected struct `String`, found &String
   |                     help: consider removing the borrow: `String::from("a")`
   |
   = note: expected type `String`
              found type `&String`

error[E0308]: mismatched types
  --> $DIR/format-borrow.rs:4:21
   |
LL |     let b: String = &format!("b");
   |                     ^^^^^^^^^^^^^
   |                     |
   |                     expected struct `String`, found &String
   |                     help: consider removing the borrow: `format!("b")`
   |
   = note: expected type `String`
              found type `&String`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
